--- a/src/main/resources/templates/platform/user/edit.html
+++ b/src/main/resources/templates/platform/user/edit.html
@@ -9,11 +9,11 @@
 </head>
 <body class="form-body">
 <form class="layui-form ">
-    <input type="hidden" name="id" th:value="${user.id}">
+    <input type="hidden" name="id">
     <div class="layui-form-item layui-col-md6 layui-col-md-offset2">
         <label class="layui-form-label">用户名</label>
         <div class="layui-input-inline form-length350">
-            <input type="text" name="username" th:value="${user.username}" lay-verify="required|username"
+            <input type="text" name="username" lay-verify="required|username"
                    placeholder="请输入用户名" autocomplete="off" class="layui-input">
         </div>
         <div class="layui-form-mid layui-word-aux">*6-12个字符</div>
@@ -28,7 +28,7 @@
     <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
         <label class="layui-form-label">手机号</label>
         <div class="layui-input-inline">
-            <input type="text" name="mobile" th:value="${user.mobile}" lay-verify="required|phone" lay-verType="tips"
+            <input type="text" name="mobile" lay-verify="required|phone" lay-verType="tips"
                    placeholder="请输入手机号" autocomplete="off" class="layui-input">
         </div>
         <div class="layui-form-mid layui-word-aux">*手机号</div>
@@ -36,7 +36,7 @@
     <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
         <label class="layui-form-label">昵称</label>
         <div class="layui-input-inline">
-            <input type="text" name="nickname" th:value="${user.nickname}" lay-verify="required" placeholder="请输入昵称"
+            <input type="text" name="nickname" lay-verify="required" placeholder="请输入昵称"
                    autocomplete="off" class="layui-input">
         </div>
         <div class="layui-form-mid layui-word-aux">*不多于30个字符</div>
@@ -44,9 +44,7 @@
     <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
         <label class="layui-form-label">角色</label>
         <div class="layui-input-inline" >
-            <text th:each="role,roleStat : ${roles}">
-                <input type="checkbox" name="roleIds" th:name="${'roleIds['+roleStat.index+']'}"  title="复选框"
-                       th:title="${role.name}" th:value="${role.id}" th:checked="${user.roleIds==null}?'false' : (${#lists.contains(user.roleIds,role.id)})">
+            <text >
             </text>
         </div>
         <div class="layui-form-mid layui-word-aux">请选择角色</div>
@@ -59,8 +57,6 @@
                     <i class="layui-icon">&#xe67c;</i>上传图片
                 </button>
                 <input type="hidden" id="photo" name="photo" value="">
-                <div id="previewPhoto"><img src="/images/default-mem.png" th:src="${defaultImageViewPath+user.photo}"
-                                            alt="" style="width: 80px;height: 80px;"></div>
             </div>
         </div>
     </div>
