引入layui，新增客户管理演示页面

--- a/src/main/resources/templates/customer/list.html
+++ b/src/main/resources/templates/customer/list.html
@@ -128,7 +128,7 @@
         });
 
         $('#exportBtn').on('click', function () {
-            window.location.href = basePath + '/sys/user/export?username=' + $("input[name=username]").val() + '&mobile=' + $("input[name=mobile]").val();
+            window.location.href = basePath + '/customer/export';
         });
     });
 
