完善基本的增删改查

--- a/src/main/resources/templates/customer/list.html
+++ b/src/main/resources/templates/customer/list.html
@@ -122,7 +122,8 @@
         });
 
         $("#addBtn").on('click', function () {
-            Common.openFrame('/customer/edit.html', '添加客户信息', '600px', '500px', function () {
+            // Common.openFrame('/customer/edit.html', '添加客户信息', '600px', '500px', function () {
+            Common.openFrame('/customer/addcustomer', '添加客户信息', '600px', '500px', function () {
                 $('#searchBtn').click();
             });
         });
