--- a/src/main/resources/templates/customer/edit.html
+++ b/src/main/resources/templates/customer/edit.html
@@ -5,7 +5,6 @@
     <title>Title</title>
     <div th:replace="common/links::header"></div>
     <div th:replace="common/script::js_footer"></div>
-    <!--<script th:src="@{/js/common/verify.js}"></script>-->
 </head>
 <body class="form-body">
 <form class="layui-form ">
@@ -80,7 +79,7 @@
     </div>
 
 
-    <div class="layui-form-item">
+  <!--  <div class="layui-form-item">
         <div class="layui-col-md4 layui-col-md-offset2">
             <label class="layui-form-label">头像</label>
             <div class="layui-input-inline">
@@ -90,7 +89,7 @@
                 <input type="hidden" id="photo" name="photo" value="">
             </div>
         </div>
-    </div>
+    </div>-->
     <div class="layui-form-item layui-col-md-offset5">
         <div class="layui-input-block">
             <button class="layui-btn" lay-submit="" lay-filter="add">立即提交</button>
@@ -99,7 +98,8 @@
     </div>
 </form>
 <script type="text/javascript" src="/js/layui/layui.all.js"></script>
-<script type="text/javascript" src="/js/common/common.js"></script>
+<script type="text/javascript" src="/js/common/common.js"></script>\
+<script th:src="@{/js/common/verify.js}"></script>
 <script th:inline="javascript">
     layui.use('form', function () {
         var form = layui.form, $ = layui.jquery;
@@ -111,8 +111,7 @@
 
         // 监听提交
         form.on('submit(add)', function (data) {
-            alert(1);
-            Common.ajaxFormSubmit('/sys/user/save-or-update', data.field, function (data) {
+            Common.ajaxFormSubmit('/customer/insert', data.field, function (data) {
                 layer.msg(data.msg, {icon: 6}, function () {
                     Common.closeFrame();
                 });
