增加基本增删改查功能

--- a/src/main/resources/templates/customer/list.html
+++ b/src/main/resources/templates/customer/list.html
@@ -54,6 +54,9 @@
                 <button type="button" class="layui-btn layui-btn-primary" id="exportBtn"><i class="layui-icon">
                     &#xe61e;</i>导出
                 </button>
+                <button type="button" class="layui-btn layui-btn-primary" id="importBtn"><i class="layui-icon">
+                    &#xe61e;</i>导入
+                </button>
             </div>
         </div>
     </form>
@@ -83,6 +86,7 @@
     layui.use('table', function () {
         var cols = [[
             {field: 'checkBox', checkbox: true, fixed: true}
+            , {field: 'customerId', title: '主键', hidden:true}
             , {field: 'name', title: '客户名称'} //width 支持：数字、百分比和不填写。你还可以通过 minWidth 参数局部定义当前单元格的最小宽度，layui 2.2.1 新增
             , {field: 'number', title: '客户编号', sort: true}
             , {field: 'phone', title: '联系电话'}
@@ -95,7 +99,7 @@
             , {field: 'linkman', title: '联系人'}
             , {field: 'op', title: '操作', align: 'center', toolbar: '#toolBars'} //这里的toolbar值是模板元素的选择器
         ]];
-        var table = layui.table, $ = layui.jquery;
+        var table = layui.table, $ = layui.jquery, upload = layui.upload;
         table.on('tool(userFilter)', function (obj) {
             var data = obj.data; //获得当前行数据
             var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
@@ -103,7 +107,7 @@
                 Common.openFrame('/sys/user/detail?id=' + data.id, '用户信息', '800px', '500px');
             } else if (layEvent === 'del') { //删除
                 layer.confirm('真的删除行么', function (index) {
-                    Common.ajaxFormSubmit('/sys/user/del', {id: data.id}, function (data) {
+                    Common.ajaxFormSubmit('/customer/deleteCustomer', {id: data.customerId}, function (data) {
                         layer.close(index);
                         layer.msg(data.msg, {icon: 6}, function () {
                             $('#searchBtn').click();
@@ -130,6 +134,23 @@
 
         $('#exportBtn').on('click', function () {
             window.location.href = basePath + '/customer/export';
+        });
+
+        $('#importBtn').on('click', function () {
+            /*Common.uploadFile('#importBtn', upload, function (data) {
+                $("#photo").val(data);
+                $("#previewPhoto img").attr("src", defaultImageViewPath + data);
+            }, {category: 'photo'});*/
+
+            upload.render({
+                elem: '#importBtn'
+                , url: basePath + '/customer/importExcel'
+                , accept: 'file' // 普通文件
+                , multiple: true
+                , done: function (res) {
+                    console.log(res);
+                }
+            });
         });
     });
 
