--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>layout 后台大布局 - Layui</title>
-    <link rel="stylesheet" href="../../static/js/layui/css/layui.css">
+    <title>商界科技</title>
+    <link rel="stylesheet" href="../../js/layui/css/layui.css">
 </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo">layui 后台布局</div>
-        <!-- 头部区域（可配合layui已有的水平导航） -->
+        <div class="layui-logo">商界科技</div>
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a href="">控制台</a></li>
             <li class="layui-nav-item"><a href="">商品管理</a></li>
@@ -44,20 +43,23 @@
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
             <ul class="layui-nav layui-nav-tree" lay-filter="test">
                 <li class="layui-nav-item layui-nav-itemed">
-                    <a class="" href="javascript:;">所有商品</a>
+                    <a class="" href="javascript:;">客户管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">列表一</a></dd>
-                        <dd><a href="javascript:;">列表二</a></dd>
-                        <dd><a href="javascript:;">列表三</a></dd>
-                        <dd><a href="">超链接</a></dd>
+                        <dd><a href="/customer/customerpage">客户信息</a></dd>
+                        <dd><a href="javascript:;">意向客户</a></dd>
+                        <dd><a href="javascript:;">签单客户</a></dd>
+                        <dd><a href="javascript:;">公海客户</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">解决方案</a>
+                    <a href="javascript:;">订单管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">列表一</a></dd>
-                        <dd><a href="javascript:;">列表二</a></dd>
-                        <dd><a href="">超链接</a></dd>
+                        <dd><a href="javascript:;">订单信息</a></dd>
+                        <dd><a href="javascript:;">订单制作</a></dd>
+                        <dd><a href="javascript:;">订单备案</a></dd>
+                        <dd><a href="javascript:;">到期订单</a></dd>
+                        <dd><a href="javascript:;">新增订单</a></dd>
+                        <dd><a href="javascript:;">售后服务</a></dd>
                     </dl>
                 </li>
                 <!--<li class="layui-nav-item"><a href="customerpage" target="option">客户管理</a></li>-->
@@ -66,25 +68,22 @@
     </div>
 
     <div class="layui-body">
-        <div style="padding: 15px;height: 100%"> <!-- th:src="@{/customer/customerpage}"-->
-            <!--<iframe id="option" name="option" th:src="@{/customer/customerpage}" src="/customer/customerpage" style="overflow: visible;" scrolling="no"
-                    frameborder="no" width="100%" height="100%"></iframe>-->
-            <iframe id="option" name="option" src="../platform/user/list.html" style="overflow: visible;" scrolling="no"
+        <div style="padding: 15px;height: 100%">
+            <iframe id="option" name="option" src="/customer/customerpage" style="overflow: visible;" scrolling="no"
                     frameborder="no" width="100%" height="100%"></iframe>
         </div>
     </div>
 
-    <div class="layui-footer">
-        <!-- 底部固定区域 -->
-        © layui.com - 底部固定区域
-    </div>
+    <!--<div class="layui-footer">-->
+        <!--&lt;!&ndash; 底部固定区域 &ndash;&gt;-->
+        <!--© layui.com - 底部固定区域-->
+    <!--</div>-->
 </div>
-<script src="../../static/js/layui/layui.js"></script>
+<script src="../../js/layui/layui.js"></script>
 <script>
-    //JavaScript代码区域
+    // JavaScript代码区域
     layui.use('element', function () {
         var element = layui.element;
-
     });
 </script>
 </body>
