--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -41,11 +41,13 @@
     <div class="layui-side layui-bg-black">
         <div class="layui-side-scroll">
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-            <ul class="layui-nav layui-nav-tree" lay-filter="test">
+            <ul class="layui-nav layui-nav-tree layui-nav-side" lay-filter="navSide" style="position: absolute">
                 <li class="layui-nav-item layui-nav-itemed">
                     <a class="" href="javascript:;">客户管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="/customer/customerpage">客户信息</a></dd>
+                        <dd><a href="javascript:;" lay-id="memu_1" text="客户信息"
+                               data-url="/customer/customerpage">客户信息</a>
+                        </dd>
                         <dd><a href="javascript:;">意向客户</a></dd>
                         <dd><a href="javascript:;">签单客户</a></dd>
                         <dd><a href="javascript:;">公海客户</a></dd>
@@ -68,22 +70,51 @@
     </div>
 
     <div class="layui-body">
-        <div style="padding: 15px;height: 100%">
+        <!-- 内容主体区域 -->
+        <div style="border: 1px solid #eeeeee">
+            <div class="layui-tab layui-tab-card" lay-allowClose="true" lay-filter="mainTab" style="margin-top: 5px;">
+                <ul id="tabTitle" class="layui-tab-title">
+                    <li class="layui-this">首页</li>
+                </ul>
+                <div id="tabContainers" class="layui-tab-content">
+                    <div class="layui-tab-item layui-show">
+                        <iframe src="/customer/welcome" name="mainFrame"
+                                style="width: 100%;height: 768px;overflow-y: scroll;border: none"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--<div style="padding: 15px;height: 100%">
             <iframe id="option" name="option" src="/customer/customerpage" style="overflow: visible;" scrolling="no"
                     frameborder="no" width="100%" height="100%"></iframe>
-        </div>
+        </div>-->
     </div>
 
-    <!--<div class="layui-footer">-->
-        <!--&lt;!&ndash; 底部固定区域 &ndash;&gt;-->
-        <!--© layui.com - 底部固定区域-->
-    <!--</div>-->
+    <div class="layui-footer">
+        <!-- 底部固定区域 -->
+        © layui.com - 底部固定区域
+    </div>
 </div>
-<script src="../../js/layui/layui.js"></script>
+<script src="../../js/layui/layui.all.js"></script>
 <script>
-    // JavaScript代码区域
     layui.use('element', function () {
-        var element = layui.element;
+        var element = layui.element, $ = layui.jquery; //导航的hover效果、二级菜单等功能，需要依赖element模块
+
+        // 监听导航点击
+        element.on('nav(navSide)', function (elem) {
+            var height = window.screen.height - 280;
+            console.log(elem.context.firstChild.dataset);
+            var url = (elem.context.firstChild.dataset)["url"];
+            var id = $(elem.context.firstChild).attr("lay-id");
+            element.tabDelete('mainTab', id);
+            element.tabAdd('mainTab', {
+                title: elem.text(),
+                content: '<iframe src="' + url + '" width="100%" height="' + height + 'px" style="border: none" name="mainFrame" id="' + id + '"></iframe>', //支持传入html
+                id: id
+            });
+            element.tabChange('mainTab', id);
+        });
     });
 </script>
 </body>
