--- a/src/main/resources/templates/customer/list.html
+++ b/src/main/resources/templates/customer/list.html
@@ -52,13 +52,13 @@
                 </button>
                 <button type="reset" class="layui-btn layui-btn-primary">重置</button>
                 <button type="button" class="layui-btn layui-btn-primary" id="exportBtn"><i class="layui-icon">
-                    &#xe61e;</i>导出
+                    &#xe67c;</i>导出
                 </button>
                 <button type="button" class="layui-btn layui-btn-primary" id="importBtn"><i class="layui-icon">
-                    &#xe61e;</i>导入
+                    &#xe601;</i>导入
                 </button>
                 <button type="button" class="layui-btn layui-btn-primary" id="downloadFileBtn"><i class="layui-icon">
-                    &#xe61e;</i>模板下载
+                    &#xe630;</i>模板下载
                 </button>
             </div>
         </div>
@@ -69,21 +69,16 @@
 <script th:src="@{/js/layui/layui.all.js}"></script>
 <script type="text/html" id="toolBars">
     <!--<div class="layui-btn-group">-->
-    <button class="layui-btn layui-btn-sm" lay-event="detail" th:title="查看">
-        <i class="layui-icon">&#xe60a;</i>
-    </button>
+    <!--<button class="layui-btn layui-btn-sm" lay-event="detail" th:title="查看">-->
+        <!--<i class="layui-icon">&#xe60a;</i>-->
+    <!--</button>-->
 
-    <button shiro:hasPermission="sys:user:edit" class="layui-btn layui-btn-sm" lay-event="edit" th:title="修改">
-        <i class="layui-icon">&#xe642;</i>
-    </button>
+    <!--<button shiro:hasPermission="sys:user:edit" class="layui-btn layui-btn-sm" lay-event="edit" th:title="修改">-->
+        <!--<i class="layui-icon">&#xe642;</i>-->
+    <!--</button>-->
     <button class="layui-btn layui-btn-sm" lay-event="del" th:title="删除">
         <i class="layui-icon">&#xe640;</i>
     </button>
-
-    <!-- <button class="layui-btn layui-btn-sm" lay-event="del" th:title="审核">
-         <i class="layui-icon">&#xe6b2;</i>
-     </button>-->
-    <!--</div>-->
 </script>
 <script th:inline="javascript">
     layui.use(['upload', 'table'], function () {
