--- a/src/main/resources/templates/customer/list.html
+++ b/src/main/resources/templates/customer/list.html
@@ -122,7 +122,8 @@
 
         upload.render({
             elem: '#importBtn'
-            , url: basePath + '/customer/importExcel'
+            , url:
+                + '/customer/importExcel'
             , accept: 'file'
             , multiple: true
             , before: function (obj) {
