--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -64,6 +64,13 @@
                         <dd><a href="javascript:;">售后服务</a></dd>
                     </dl>
                 </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;">权限管理</a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;" lay-id="memu_1" text="用户管理"
+                               data-url="/permission/list.html">用户管理</a></dd>
+                    </dl>
+                </li>
                 <!--<li class="layui-nav-item"><a href="customerpage" target="option">客户管理</a></li>-->
             </ul>
         </div>
