--- a/src/main/resources/templates/permission/list.html
+++ b/src/main/resources/templates/permission/list.html
@@ -2,11 +2,164 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.w3.org/1999/xhtml">
 <head>
-    <title>用户</title>
+    <title>客户管理</title>
     <div th:replace="common/links::header"></div>
     <div th:replace="common/script::js_footer"></div>
 </head>
 <body>
-用户列表
+<fieldset class="layui-elem-field">
+    <legend>条件搜索</legend>
+    <form class="layui-form" style="text-align: left" id="searchForm">
+        <div class="layui-form-item"> <!--layui-col-md6 layui-col-md-->
+            <div class="layui-inline">
+                <label class="layui-form-label">客户名称</label>
+                <div class="layui-input-inline">
+                    <input type="text" name="name" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">联系人</label>
+                <div class="layui-input-inline">
+                    <input type="text" name="linkman" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">电话</label>
+                <div class="layui-input-inline">
+                    <input type="tel" name="phone" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">客户类型</label>
+                <div class="layui-input-inline">
+                    <select name="type" lay-verify="required" lay-search="">
+                        <option value="">请选择</option>
+                        <option value="0">意向客户</option>
+                        <option value="1">签单客户</option>
+                        <option value="2">公海客户</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <div class="layui-input-block">
+                <button type="button" shiro:hasPermission="sys:user:add" class="layui-btn layui-btn-primary"
+                        id="addBtn"><i class="layui-icon">&#xe654;</i>新增
+                </button>
+                <button type="button" class="layui-btn layui-btn-primary" id="searchBtn"><i class="layui-icon">
+                    &#xe615;</i>搜索
+                </button>
+                <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                <button type="button" class="layui-btn layui-btn-primary" id="exportBtn"><i class="layui-icon">
+                    &#xe67c;</i>导出
+                </button>
+                <button type="button" class="layui-btn layui-btn-primary" id="importBtn"><i class="layui-icon">
+                    &#xe601;</i>导入
+                </button>
+                <button type="button" class="layui-btn layui-btn-primary" id="downloadFileBtn"><i class="layui-icon">
+                    &#xe630;</i>模板下载
+                </button>
+            </div>
+        </div>
+    </form>
+</fieldset>
+<hr class="layui-bg-green">
+<table class="layui-hide" id="customerTable" lay-filter="userFilter"></table>
+<script th:src="@{/js/layui/layui.all.js}"></script>
+<script type="text/html" id="toolBars">
+    <!--<div class="layui-btn-group">-->
+    <!--<button class="layui-btn layui-btn-sm" lay-event="detail" th:title="查看">-->
+    <!--<i class="layui-icon">&#xe60a;</i>-->
+    <!--</button>-->
+
+    <button shiro:hasPermission="sys:user:edit" class="layui-btn layui-btn-sm" lay-event="edit" th:title="修改">
+        <i class="layui-icon">&#xe642;</i>
+    </button>
+    <button class="layui-btn layui-btn-sm" lay-event="del" th:title="删除">
+        <i class="layui-icon">&#xe640;</i>
+    </button>
+</script>
+<script th:inline="javascript">
+    layui.use(['upload', 'table', 'laypage'], function () {
+        var cols = [[
+            {field: 'checkBox', checkbox: true, fixed: true}
+            , {field: 'name', title: '客户名称'} //width 支持：数字、百分比和不填写。你还可以通过 minWidth 参数局部定义当前单元格的最小宽度，layui 2.2.1 新增
+            , {field: 'number', title: '客户编号', sort: true}
+            , {field: 'phone', title: '联系电话'}
+            , {field: 'corpTel', title: '公司电话'}
+            , {field: 'mail', title: '邮箱'}
+            , {field: 'address', title: '通讯地址'}
+            , {field: 'type', title: '客户类型'}
+            , {field: 'corpGrade', title: '客户级别'}
+            , {field: 'visitDate', title: '回访日期'}
+            , {field: 'linkman', title: '联系人'}
+            , {field: 'op', title: '操作', align: 'center', toolbar: '#toolBars'} //这里的toolbar值是模板元素的选择器
+        ]];
+        var table = layui.table, $ = layui.jquery, upload = layui.upload, laypage = layui.laypage;
+        table.on('tool(userFilter)', function (obj) {
+            var data = obj.data; // 获得当前行数据
+            var layEvent = obj.event; // 获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
+            if (layEvent === 'detail') { // 查看
+                Common.openFrame('/sys/user/detail?id=' + data.id, '用户信息', '800px', '500px');
+            } else if (layEvent === 'del') { // 删除
+                layer.confirm('真的删除行么', function (index) {
+                    Common.ajaxFormSubmit('/customer/deleteCustomer', {id: data.customerId}, function (data) {
+                        layer.close(index);
+                        layer.msg(data.msg, {icon: 6}, function () {
+                            $('#searchBtn').click();
+                        });
+                    });
+                });
+            } else if (layEvent === 'edit') { // 编辑
+                Common.openFrame('/customer/editCustomer?id=' + data.customerId, '修改用户信息', '800px', '500px', function () {
+                    $('#searchBtn').click();
+                });
+            }
+        });
+
+        var initTable = Common.initTable('#customerTable', '/customer/list', cols, table);
+
+        upload.render({
+            elem: '#importBtn'
+            , url:
+                + '/customer/importExcel'
+            , accept: 'file'
+            , multiple: true
+            , before: function (obj) {
+                console.log(obj);
+            }
+            , done: function (res) {
+                layer.msg('导入完成');
+                Common.searchTable('searchForm', initTable);
+            }, error: function () {
+                layer.msg('导入失败');
+            }
+        });
+
+        $('#searchBtn').on('click', function () {
+            Common.searchTable('searchForm', initTable);
+        });
+
+        $("#addBtn").on('click', function () {
+            Common.openFrame('/customer/addcustomer', '添加客户信息', '600px', '500px', function () {
+                $('#searchBtn').click();
+            });
+        });
+
+        $('#exportBtn').on('click', function () {
+            window.location.href = basePath + '/customer/export';
+        });
+
+        $('#downloadFileBtn').on('click', function () {
+            location.href = basePath + '/excel/customertemplate.xls';
+        });
+    });
+
+    layui.use('form', function () {
+        var form = layui.form;
+        form.render();
+    });
+</script>
 </body>
 </html>
