--- a/src/main/resources/templates/customer/list.html
+++ b/src/main/resources/templates/customer/list.html
@@ -132,8 +132,7 @@
 
         upload.render({
             elem: '#importBtn'
-            , url:
-                + '/customer/importExcel'
+            , url: basePath + '/customer/importExcel'
             , accept: 'file'
             , multiple: true
             , before: function (obj) {
